# UniversalBootstrap

./: .gitignore  CMakeLists.txt  README.md  Resource.rc  UniversalBootstrap.cpp  UniversalBootstrap.slnx  UniversalBootstrap.vcxproj  UniversalBootstrap.vcxproj.filters
.github/workflows/: build-windows.yml  ci.yml
UniversalTester/: Resource.rc  UniversalTester.cpp  UniversalTester.vcxproj  UniversalTester.vcxproj.filters
